--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>Hello World!</h1>
+    <button id="btn">click</button>
+    <script type="text/javascript" src="index.js"></script>
+
 </head>
 <body>
     
